# cnc-vision

./: CMakeLists.txt  README.md  automator.cpp  automator.h  cameracalibrator.cpp  cameracalibrator.h  capturecontroller.cpp  capturecontroller.hpp  cvmatsurfacesource.cpp  cvmatsurfacesource.hpp  gcodeplayer.cpp  gcodeplayer.h  gcodeplayeritem.h  gcodeplayermodel.cpp  gcodeplayermodel.h  linedetector.cpp  linedetector.h  linedetectordatasource.cpp  linedetectordatasource.h  main.cpp  main.qml  qtquickcontrols2.conf  rayreceiver.cpp  rayreceiver.h
